[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/block_mover.gd" type="Script" id=1]

[node name="BlockMover" type="Node"]
script = ExtResource( 1 )

[node name="StartPos" type="Position2D" parent="."]

[node name="EndPos" type="Position2D" parent="."]
